Add robots.txt, llms.txt, and update footer with partner links

--- a/index.html
+++ b/index.html
@@ -581,17 +581,85 @@
 
     <!-- Footer -->
     <footer class="bg-primary py-16 text-white border-t border-emerald-900">
-        <div class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center">
-            <div class="mb-8 md:mb-0 text-center md:text-left">
-                <span class="font-serif text-2xl font-bold tracking-tight">Topiary Park Living</span>
-                <p class="text-emerald-200/60 text-sm mt-3">© 2025 Topiary Park Living. All rights reserved.</p>
+        <div class="container mx-auto px-4">
+            <!-- Main Footer Content -->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-12 mb-12">
+                <!-- Brand Column -->
+                <div class="text-center md:text-left">
+                    <span class="font-serif text-2xl font-bold tracking-tight">Topiary Park Living</span>
+                    <p class="text-emerald-200/80 text-sm mt-4 leading-relaxed">
+                        Historic apartments in downtown Columbus. Authentic living without the amenity fees.
+                    </p>
+                    <p class="text-emerald-200/60 text-xs mt-4">
+                        441 & 451 E Town Street<br>
+                        Columbus, OH 43215
+                    </p>
+                </div>
+
+                <!-- Quick Links Column -->
+                <div class="text-center md:text-left">
+                    <h3 class="font-serif text-lg font-bold mb-4 text-accent">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a href="#why-us" class="text-emerald-200 hover:text-white transition-colors text-sm">Why
+                                Us</a>
+                        </li>
+                        <li>
+                            <a href="#availability"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#neighborhood"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">Neighborhood</a>
+                        </li>
+                        <li>
+                            <a href="privacy-policy.html"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="terms-of-service.html"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">Terms of Service</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Partners & Management Column -->
+                <div class="text-center md:text-left">
+                    <h3 class="font-serif text-lg font-bold mb-4 text-accent">Partners & Management</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a href="https://www.dev.partners" target="_blank" rel="noopener"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">
+                                DEV.Partners <span class="text-emerald-200/60 text-xs">- Developer</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.shyftcollaborative.com" target="_blank" rel="noopener"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">
+                                Shyft Collaborative <span class="text-emerald-200/60 text-xs">- Construction</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.devore.consulting" target="_blank" rel="noopener"
+                                class="text-emerald-200 hover:text-white transition-colors text-sm">
+                                DeVore Consulting <span class="text-emerald-200/60 text-xs">- Project Management</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://thresholdcbus.managebuilding.com/Resident/public/home" target="_blank"
+                                rel="noopener" class="text-emerald-200 hover:text-white transition-colors text-sm">
+                                Threshold Property Management
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="flex space-x-8">
-                <a href="privacy-policy.html"
-                    class="text-emerald-200 hover:text-white transition-colors text-sm font-medium tracking-wide">Privacy
-                    Policy</a>
-                <a href="terms-of-service.html"
-                    class="text-emerald-200 hover:text-white transition-colors text-sm font-medium tracking-wide">Terms</a>
+
+            <!-- Footer Bottom -->
+            <div class="border-t border-emerald-800 pt-8 text-center">
+                <p class="text-emerald-200/60 text-sm">
+                    © 2025 Topiary Park Living. All rights reserved. Locally owned and operated in Columbus, Ohio.
+                </p>
             </div>
         </div>
     </footer>
