Update utilities language and fix SHYFT branding + mobile responsive fixes

--- a/index.html
+++ b/index.html
@@ -339,8 +339,9 @@
 
             <p
                 class="text-primary font-bold bg-white inline-block px-8 py-4 rounded-full border border-gray-200 shadow-sm text-lg">
-                Pricing reflects our no-amenity-fee policy. What you see is what you pay. Heat, gas, water, and trash
-                are billed for exactly the amount used with absolutely NO landlord or 3rd party markup or fees.
+                Pricing reflects our no-amenity-fee policy. Utilities (heat, gas, water, trash) are NOT included in rent
+                but are billed separately for exactly the amount used with absolutely NO landlord or 3rd party markup or
+                fees.
             </p>
         </div>
     </section>
@@ -367,7 +368,7 @@
                         </li>
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
-                            Heat, gas, water, trash included in rent
+                            Utilities billed at cost (no markup or fees)
                         </li>
                         <li class="flex items-center text-text text-lg">
                             <span class="w-2.5 h-2.5 bg-primary rounded-full mr-4"></span>
@@ -634,9 +635,9 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.shyftcollaborative.com" target="_blank" rel="noopener"
-                                class="text-emerald-200 hover:text-white transition-colors text-sm">
-                                Shyft Collaborative <span class="text-emerald-200/60 text-xs">- Construction</span>
+                            <a href="https://www.shyftcollective.com" target="_blank" rel="noopener"
+                                class="text-emerald-100 hover:text-white transition-colors duration-200">
+                                SHYFT Collective <span class="text-emerald-200/60 text-xs">- Construction</span>
                             </a>
                         </li>
                         <li>
