--- a/index.html
+++ b/index.html
@@ -89,9 +89,33 @@
 
 <body class="font-sans text-text antialiased bg-texture leading-relaxed">
 
+    <!-- Sticky Contact Bar -->
+    <div class="bg-accent text-white py-2.5 text-center text-sm font-medium sticky top-0 z-50 shadow-md">
+        <div class="container mx-auto px-4 flex flex-col sm:flex-row items-center justify-center gap-2 sm:gap-6">
+            <a href="tel:614-285-6420" class="hover:text-accent-hover transition-colors flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                </svg>
+                Call or text 614-285-6420
+            </a>
+            <span class="hidden sm:inline text-white/60">|</span>
+            <a href="https://thresholdcbus.com" target="_blank" rel="noopener noreferrer"
+                class="hover:text-accent-hover transition-colors flex items-center gap-2">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                </svg>
+                Visit thresholdcbus.com
+            </a>
+        </div>
+    </div>
+
     <!-- Header -->
     <header
-        class="sticky top-0 z-50 bg-white/90 backdrop-blur-md shadow-sm border-b border-gray-100 transition-all duration-300">
+        class="sticky top-10 z-40 bg-white/90 backdrop-blur-md shadow-sm border-b border-gray-100 transition-all duration-300">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="#" class="font-serif text-2xl font-bold text-primary tracking-tight">Topiary Park Living</a>
 
@@ -143,6 +167,39 @@
                 class="inline-block bg-accent text-white px-10 py-4 rounded-md font-bold text-lg hover:bg-accent-hover transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
                 Schedule Your Tour
             </a>
+        </div>
+    </section>
+
+    <!-- CTA Banner -->
+    <section class="bg-primary py-8 border-y-4 border-accent">
+        <div class="container mx-auto px-4 text-center">
+            <div class="flex flex-col md:flex-row items-center justify-center gap-6 md:gap-12">
+                <div class="flex items-center gap-3 text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-accent" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                    </svg>
+                    <div class="text-left">
+                        <p class="text-accent text-xs font-semibold uppercase tracking-wider">Call or Text</p>
+                        <a href="tel:614-285-6420"
+                            class="text-2xl font-bold hover:text-accent transition-colors">614-285-6420</a>
+                    </div>
+                </div>
+                <div class="hidden md:block h-12 w-px bg-accent/30"></div>
+                <div class="flex items-center gap-3 text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-accent" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                    </svg>
+                    <div class="text-left">
+                        <p class="text-accent text-xs font-semibold uppercase tracking-wider">Visit Us Online</p>
+                        <a href="https://thresholdcbus.com" target="_blank" rel="noopener noreferrer"
+                            class="text-2xl font-bold hover:text-accent transition-colors">thresholdcbus.com</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -322,6 +379,35 @@
         </div>
     </section>
 
+    <!-- Mid-Page CTA -->
+    <section class="py-16 bg-gradient-to-r from-primary to-emerald-800 text-white">
+        <div class="container mx-auto px-4 text-center reveal">
+            <h3 class="font-serif text-3xl md:text-4xl font-bold mb-6">Ready to See Your New Home?</h3>
+            <p class="text-xl text-emerald-100 mb-8 max-w-2xl mx-auto">Contact us today to schedule a tour or learn more
+                about available units.</p>
+            <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
+                <a href="tel:614-285-6420"
+                    class="inline-flex items-center gap-3 bg-accent text-white px-8 py-4 rounded-md font-bold text-lg hover:bg-accent-hover transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                    </svg>
+                    Call 614-285-6420
+                </a>
+                <a href="https://thresholdcbus.com" target="_blank" rel="noopener noreferrer"
+                    class="inline-flex items-center gap-3 bg-white text-primary px-8 py-4 rounded-md font-bold text-lg hover:bg-gray-100 transition-all duration-300 shadow-lg hover:shadow-xl transform hover:-translate-y-1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                    </svg>
+                    Visit thresholdcbus.com
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Availability -->
     <section id="availability" class="py-24 bg-texture">
         <div class="container mx-auto px-4 text-center reveal">
@@ -340,7 +426,7 @@
             <p
                 class="text-primary font-bold bg-white inline-block px-8 py-4 rounded-full border border-gray-200 shadow-sm text-lg">
                 Pricing reflects our no-amenity-fee policy. Utilities (heat, gas, water, trash) are NOT included in rent
-                but are billed separately for exactly the amount used with absolutely NO landlord or 3rd party markup or
+                but are billed separately for the amount used with NO landlord or 3rd party markup or
                 fees.
             </p>
         </div>
@@ -569,6 +655,35 @@
             <p class="text-lg text-text mb-8 font-medium">
                 441 & 451 E Town Street, Columbus, OH 43215
             </p>
+
+            <!-- Contact Options -->
+            <div class="bg-white rounded-xl shadow-lg p-8 mb-10 max-w-2xl mx-auto border border-gray-200">
+                <h3 class="font-serif text-2xl font-bold text-primary mb-6">Get In Touch</h3>
+                <div class="space-y-4">
+                    <a href="tel:614-285-6420"
+                        class="flex items-center justify-center gap-3 text-primary hover:text-accent transition-colors group">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6 group-hover:scale-110 transition-transform" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                        </svg>
+                        <span class="text-xl font-bold">Call or text 614-285-6420</span>
+                    </a>
+                    <div class="h-px bg-gray-200"></div>
+                    <a href="https://thresholdcbus.com" target="_blank" rel="noopener noreferrer"
+                        class="flex items-center justify-center gap-3 text-primary hover:text-accent transition-colors group">
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6 group-hover:scale-110 transition-transform" fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                        </svg>
+                        <span class="text-xl font-bold">Visit thresholdcbus.com</span>
+                    </a>
+                </div>
+            </div>
+
             <p class="text-base text-primary mb-12 font-bold">
                 Locally owned and managed. We answer our phones. We fix things fast.
             </p>
@@ -587,7 +702,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12 mb-12">
                 <!-- Brand Column -->
                 <div class="text-center md:text-left">
-                    <span class="font-serif text-2xl font-bold tracking-tight">Topiary Park Living</span>
+                    <span class="font-serif text-2xl font-bold tracking-tight">East Town Apartments</span>
                     <p class="text-emerald-200/80 text-sm mt-4 leading-relaxed">
                         Historic apartments in downtown Columbus. Authentic living without the amenity fees.
                     </p>
@@ -595,6 +710,26 @@
                         441 & 451 E Town Street<br>
                         Columbus, OH 43215
                     </p>
+                    <div class="mt-6 space-y-2">
+                        <a href="tel:614-285-6420"
+                            class="flex items-center justify-center md:justify-start gap-2 text-accent hover:text-white transition-colors">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+                            </svg>
+                            <span class="text-sm font-semibold">614-285-6420</span>
+                        </a>
+                        <a href="https://thresholdcbus.com" target="_blank" rel="noopener noreferrer"
+                            class="flex items-center justify-center md:justify-start gap-2 text-accent hover:text-white transition-colors">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                            </svg>
+                            <span class="text-sm font-semibold">thresholdcbus.com</span>
+                        </a>
+                    </div>
                 </div>
 
                 <!-- Quick Links Column -->
