Fix Search Console indexing issues, add canonical tags, and Open Graph metadata

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Topiary Park Living - Live Where Columbus Comes Alive</title>
     <meta name="description"
         content="Historic charm meets Discovery District walkability in downtown Columbus. No gym fees. Just authentic urban living.">
+    <link rel="canonical" href="https://topiaryparkliving.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://topiaryparkliving.com/">
+    <meta property="og:title" content="Topiary Park Living - Live Where Columbus Comes Alive">
+    <meta property="og:description"
+        content="Historic charm meets Discovery District walkability in downtown Columbus. No gym fees. Just authentic urban living.">
+    <meta property="og:image"
+        content="https://topiaryparkliving.com/src/assets/images/topiary-park-living-exterior-discovery-district.webp">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://topiaryparkliving.com/">
+    <meta property="twitter:title" content="Topiary Park Living - Live Where Columbus Comes Alive">
+    <meta property="twitter:description"
+        content="Historic charm meets Discovery District walkability in downtown Columbus. No gym fees. Just authentic urban living.">
+    <meta property="twitter:image"
+        content="https://topiaryparkliving.com/src/assets/images/topiary-park-living-exterior-discovery-district.webp">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
