--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,7 +7,7 @@
     <title>Terms of Service - Topiary Park Living</title>
     <meta name="description"
         content="Terms of Service for Topiary Park Living. Read our terms regarding website usage and services.">
-    <meta name="robots" content="noindex, follow">
+    <link rel="canonical" href="https://topiaryparkliving.com/terms-of-service.html">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
