--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
     <title>Privacy Policy - Topiary Park Living</title>
     <meta name="description"
         content="Privacy Policy for Topiary Park Living. Learn how we collect, use, and protect your personal information.">
-    <meta name="robots" content="noindex, follow">
+    <link rel="canonical" href="https://topiaryparkliving.com/privacy-policy.html">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
